--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_hooks: ^0.18.2
   bmi:
-    path: packages/bmi
+    git:
+      url: https://github.com/Thalinda/My_pcakages/
+      path: packages/bmi
 
 dev_dependencies:
   flutter_lints: ^1.0.0
