--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
-  flutter:
-    sdk: flutter
-  flutter_bloc: ^8.0.1
-  flutter_hooks: ^0.18.2
   bmi:
     git:
       url: https://github.com/Thalinda/My_pcakages/
       path: packages/bmi
+  cupertino_icons: ^1.0.2
+  dropdown_search: ^2.0.1
+  dynamicform:
+    path: packages/dynamicform
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.0.1
+  flutter_hooks: ^0.18.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
