--- a/packages/dynamicform/pubspec.yaml
+++ b/packages/dynamicform/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dropdown_search: ^2.0.1
   flutter:
     sdk: flutter
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
